syntax = "proto3";

package Business;
option go_package="proto";

service SendMessage {
  rpc Say (SayRequest) returns (SayResponse);
}

message  SayRequest {
  int32 OpCode = 1;
  string OpMessage = 2;
}

message SayResponse {
  string Name = 1;
}
